<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animationCache="false"
    android:background="@drawable/dashboard_fragment_paper_bg"
    android:foregroundGravity="left">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AdminDashboard"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/enterDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-medium"
            android:text="Enter document details"
            android:textColor="#444A81"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <ImageView
            android:id="@+id/documentIDCtn"
            android:layout_width="344dp"
            android:layout_height="93dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterDetails"
            app:srcCompat="@drawable/add_book_field_ctn"
            tools:ignore="MissingConstraints"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <ImageView
            android:id="@+id/titleCtn"
            android:layout_width="344dp"
            android:layout_height="93dp"
            android:layout_marginTop="72dp"
            app:layout_constraintEnd_toEndOf="@+id/documentIDCtn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/documentIDCtn"
            app:layout_constraintTop_toTopOf="@+id/documentIDCtn"
            app:srcCompat="@drawable/add_book_field_ctn"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <ImageView
            android:id="@+id/authorCtn"
            android:layout_width="344dp"
            android:layout_height="93dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="@+id/titleCtn"
            app:layout_constraintStart_toStartOf="@+id/titleCtn"
            app:layout_constraintTop_toBottomOf="@+id/documentIDCtn"
            app:srcCompat="@drawable/add_book_field_ctn"
            tools:ignore="MissingConstraints"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <ImageView
            android:id="@+id/genreCtn"
            android:layout_width="344dp"
            android:layout_height="93dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="@+id/authorCtn"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/authorCtn"
            app:layout_constraintTop_toBottomOf="@+id/titleCtn"
            app:srcCompat="@drawable/add_book_field_ctn"
            tools:ignore="MissingConstraints"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <ImageView
            android:id="@+id/publisherCtn"
            android:layout_width="344dp"
            android:layout_height="93dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="@+id/genreCtn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/genreCtn"
            app:layout_constraintTop_toBottomOf="@+id/authorCtn"
            app:srcCompat="@drawable/add_book_field_ctn"
            tools:ignore="MissingConstraints"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <ImageView
            android:id="@+id/publishedYearCtn"
            android:layout_width="166dp"
            android:layout_height="62dp"
            android:layout_marginTop="68dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/publisherCtn"
            app:layout_constraintTop_toBottomOf="@+id/genreCtn"
            app:srcCompat="@drawable/published_year_ctn"
            tools:ignore="MissingConstraints"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <ImageView
            android:id="@+id/numOfCopiesCtn"
            android:layout_width="166dp"
            android:layout_height="62dp"
            android:layout_marginTop="68dp"
            app:layout_constraintEnd_toEndOf="@+id/publisherCtn"
            app:layout_constraintTop_toBottomOf="@+id/genreCtn"
            app:srcCompat="@drawable/published_year_ctn"
            tools:ignore="MissingConstraints"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <ImageView
            android:id="@+id/descriptionCtn"
            android:layout_width="353dp"
            android:layout_height="143dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/numOfCopiesCtn"
            app:layout_constraintStart_toStartOf="@+id/publishedYearCtn"
            app:layout_constraintTop_toBottomOf="@+id/publishedYearCtn"
            app:srcCompat="@drawable/description_ctn"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/documentIDTf"
            android:layout_width="336dp"
            android:layout_height="37dp"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:backgroundTint="#575757"
            android:ems="10"
            android:hint="@string/documentIDHint"
            android:inputType="number"
            android:maxLength="9"
            android:textColor="#575757"
            android:textColorHighlight="#575757"
            android:textColorHint="@color/common_google_signin_btn_text_light_default"
            android:textColorLink="#575757"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/documentIDCtn"
            app:layout_constraintEnd_toEndOf="@+id/documentIDCtn"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/documentIDCtn"
            app:layout_constraintTop_toTopOf="@+id/documentIDCtn"
            app:layout_constraintVertical_bias="0.464"
            tools:ignore="MissingConstraints"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <EditText
            android:id="@+id/bookTitleTf"
            android:layout_width="333dp"
            android:layout_height="33dp"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:backgroundTint="#575757"
            android:ems="10"
            android:hint="@string/titleHint"
            android:inputType="textPersonName"
            android:scrollHorizontally="false"
            android:textColor="#575757"
            android:textColorHighlight="#575757"
            android:textColorHint="@color/common_google_signin_btn_text_light_default"
            android:textColorLink="#575757"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/titleCtn"
            app:layout_constraintStart_toStartOf="@+id/documentIDTf"
            app:layout_constraintTop_toTopOf="@+id/titleCtn"
            app:layout_constraintVertical_bias="0.513"
            tools:ignore="MissingConstraints"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <EditText
            android:id="@+id/authorTf"
            android:layout_width="333dp"
            android:layout_height="38dp"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:backgroundTint="#575757"
            android:ems="10"
            android:hint="@string/authorHint"
            android:inputType="textPersonName"
            android:textColor="#575757"
            android:textColorHighlight="#575757"
            android:textColorHint="@color/common_google_signin_btn_text_light_default"
            android:textColorLink="#575757"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/authorCtn"
            app:layout_constraintStart_toStartOf="@+id/bookTitleTf"
            app:layout_constraintTop_toTopOf="@+id/authorCtn"
            app:layout_constraintVertical_bias="0.486"
            tools:ignore="MissingConstraints"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <EditText
            android:id="@+id/genreTf"
            android:layout_width="333dp"
            android:layout_height="33dp"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:backgroundTint="#575757"
            android:ems="10"
            android:hint="@string/genreHint"
            android:inputType="text"
            android:textColor="#575757"
            android:textColorHighlight="#575757"
            android:textColorHint="@color/common_google_signin_btn_text_light_default"
            android:textColorLink="#575757"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/genreCtn"
            app:layout_constraintStart_toStartOf="@+id/authorTf"
            app:layout_constraintTop_toTopOf="@+id/genreCtn"
            app:layout_constraintVertical_bias="0.458"
            tools:ignore="MissingConstraints"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <EditText
            android:id="@+id/publisherTf"
            android:layout_width="335dp"
            android:layout_height="35dp"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:backgroundTint="#575757"
            android:ems="10"
            android:hint="@string/publisherHint"
            android:inputType="textPersonName"
            android:textColor="#575757"
            android:textColorHighlight="#575757"
            android:textColorHint="@color/common_google_signin_btn_text_light_default"
            android:textColorLink="#575757"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/publisherCtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/genreTf"
            app:layout_constraintTop_toTopOf="@+id/publisherCtn"
            app:layout_constraintVertical_bias="0.444"
            tools:ignore="MissingConstraints"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <EditText
            android:id="@+id/publishedYearTf"
            android:layout_width="156dp"
            android:layout_height="29dp"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:backgroundTint="#575757"
            android:ems="10"
            android:hint="@string/publishedYearHint"
            android:inputType="number"
            android:textColor="#575757"
            android:textColorHighlight="#575757"
            android:textColorHint="@color/common_google_signin_btn_text_light_default"
            android:textColorLink="#575757"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/publishedYearCtn"
            app:layout_constraintStart_toStartOf="@+id/publisherTf"
            app:layout_constraintTop_toTopOf="@+id/publishedYearCtn"
            app:layout_constraintVertical_bias="0.458"
            tools:ignore="MissingConstraints"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />


        <EditText
            android:id="@+id/numOfCopiesTf"
            android:layout_width="140dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:backgroundTint="#575757"
            android:ems="10"
            android:hint="@string/numOfCopiesHint"
            android:inputType="number"
            android:textColor="#575757"
            android:textColorHighlight="#575757"
            android:textColorHint="@color/common_google_signin_btn_text_light_default"
            android:textColorLink="#575757"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/numOfCopiesCtn"
            app:layout_constraintStart_toStartOf="@+id/numOfCopiesCtn"
            app:layout_constraintTop_toTopOf="@+id/numOfCopiesCtn"
            app:layout_constraintVertical_bias="0.409"
            tools:ignore="MissingConstraints"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <EditText
            android:id="@+id/descriptionTf"
            android:layout_width="wrap_content"
            android:layout_height="119dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:backgroundTint="#575757"
            android:ems="10"
            android:gravity="top|left"
            android:hint="@string/descriptionHint"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:textColor="#575757"
            android:textColorHighlight="#575757"
            android:textColorHint="@color/common_google_signin_btn_text_light_default"
            android:textColorLink="#575757"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/descriptionCtn"
            app:layout_constraintStart_toStartOf="@+id/descriptionCtn"
            app:layout_constraintTop_toTopOf="@+id/descriptionCtn"
            app:layout_constraintVertical_bias="0.347"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="135dp"
            android:layout_height="37dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/addBookCtn"
            app:layout_constraintHorizontal_bias="0.417"
            app:layout_constraintStart_toStartOf="@+id/addBookCtn"
            app:layout_constraintTop_toTopOf="@+id/addBookCtn"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            tools:ignore="MissingConstraints"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <ImageView
            android:id="@+id/bookImage"
            android:layout_width="76dp"
            android:layout_height="65dp"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionCtn"
            app:srcCompat="@android:drawable/ic_menu_gallery"
            tools:ignore="MissingConstraints"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <ImageView
            android:id="@+id/addBookCtn"
            android:layout_width="170dp"
            android:layout_height="75dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookImage"
            app:srcCompat="@drawable/add_document_button" />

        <TextView
            android:id="@+id/addDocumentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add document"
            android:textColor="#444A81"
            app:layout_constraintBottom_toBottomOf="@+id/addBookCtn"
            app:layout_constraintEnd_toEndOf="@+id/addBookCtn"
            app:layout_constraintStart_toStartOf="@+id/addBookCtn"
            app:layout_constraintTop_toTopOf="@+id/addBookCtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>